wb desire lot _ ref